Fix banner css on mobile devices

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -1303,7 +1303,7 @@ li a:hover {
 
   .banner {
       font-size: 32px;
-      width: 420px;
+      width: 425px;
       height: 200px;
       margin-bottom: 90px;
   }
